k8-project-3/quotas.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: production
  labels:
    environment: production
