k8-project-3/postgre-deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: production
  labels:
    app: postgres
spec:
  type: ClusterIP
  ports:
    - port: 5432
      targetPort: 5432
      name: postgresql
  selector:
    app: postgres
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
  namespace: production
  labels:
    app: postgres
spec:
  replicas: 1
  strategy:
    type: Recreate # RWO diskin aynı anda tek pod tarafından mount edilmesini garanti eder
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      # 1. Taint Toleration (Worker üzerindeki NoSchedule engelini aşar)
      tolerations:
        - key: "workload"
          operator: "Equal"
          value: "database"
          effect: "NoSchedule"

      # 2. Node Affinity (Pod'un kesinlikle production etiketli node'lara gitmesini zorunlu kılar)
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: tier
                    operator: In
                    values:
                      - database
      containers:
        - name: postgresql
          image: docker.io/library/postgres:16-alpine                           
          ports:
            - containerPort: 5432
              name: postgresql
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
             
          resources:
            requests:
              cpu: 250m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-pvc
